Return Execution Report